# pkgtest

./: CMakeLists.txt  README.md  hello.c  t_agg.cxx  t_armadillo.cxx  t_asmjit.cxx  t_blas.f90  t_boost.cxx  t_cgal.cxx  t_expat.c  t_freetype.cxx  t_hmat.c  t_iconv.c  t_jpeg.c  t_lapack.f90  t_libsvm.c  t_libxml2.c  t_libzip.c  t_nlopt.cxx  t_opencv.cxx  t_openmesh.cxx  t_openmp.c  t_openssl.c  t_python.c  t_qscintilla.cxx  t_qt4.cxx  t_qwt.cxx  t_readline.c  t_sdl.c  t_sdl2_image.c  t_sdl2_mixer.c  t_tbb.cxx  t_vtk.cxx  widget.h
cmake/: FindAGG.cmake  FindAsmJit.cmake  FindBox2D.cmake  FindCOIN.cmake  FindCuba.cmake  FindEigen.cmake  FindExprTk.cmake  FindFFTW.cmake  FindFLINT.cmake  FindFREEGLUT.cmake  FindFreeImage.cmake  FindGL2PS.cmake  FindHQP.cmake  FindLibBacktrace.cmake  FindLibCmaes.cmake  FindLibHaru.cmake  FindLibSVM.cmake  FindLibUSB.cmake  FindLibZip.cmake  FindLpSolve.cmake  FindMUMPS.cmake  FindMiniZip.cmake  FindMuParser.cmake  FindNLopt.cmake  FindNlopt.cmake  FindOPTPP.cmake  FindOgg.cmake  FindOpenMesh.cmake  FindQScintilla.cmake  FindQSint.cmake  FindQhull.cmake  FindQwt.cmake  FindReadline.cmake  FindSDL2_image.cmake  FindSDL_gfx.cmake  FindSGpp.cmake  FindSpectra.cmake  FindTBB.cmake  FindVorbis.cmake  Findarpack-ng.cmake  (+4 more)
qt/: CMakeLists.txt  t_qscintilla.cxx  t_qt4.cxx
test/: MyTMINLP.cpp  t_agrum.cxx  t_arpack.cxx  t_assimp.cxx  t_backtrace.c  t_blas.f90  t_bonmin.cxx  t_bullet.cxx  t_bzip2.c  t_cerf.c  t_confuse.c  t_cpptrace.cxx  t_cxsparse.c  t_eigen.cxx  t_expat.c  t_fann.c  t_fastfloat.cxx  t_fftw.c  t_flint.c  t_freeglut.c  t_freeimage.c  t_gl2ps.c  t_glew.cxx  t_glog.cxx  t_hdf5cpp.cxx  t_hmat.c  t_hqp.cxx  t_iconv.c  t_jsoncpp.cxx  t_libcmaes.cxx  t_libdl.c  t_libharu.c  t_libidn2.c  t_libnghttp2.c  t_libpsl.c  t_libssh2.c  t_libusb.c  t_libxml2.c  t_matplot.cxx  t_minizip.c  (+26 more)
